--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,9 +8,21 @@ footer img.cc {
 }
 
 .contact {
-  width: 3.5em;
-  height: 3.5em;
+  width: 4em;
+  height: 4em;
   padding: 0.5em;
+}
+
+#contact-email {
+  width: 4.5em;
+  height: 4.5em;
+  padding: 0.5em;
+  padding-top: 1em;
+}
+
+span.reverse {
+  unicode-bidi: bidi-override;
+  direction: rtl;
 }
 
 footer {
