--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,10 @@
     {% if site.author.twitter %}
     <a href="https://twitter.com/{{ site.author.twitter }}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
     {% endif %}
+
+    {% if site.author.github %}
+    <a href="https://github.com/{{ site.author.github }}"><i class="fa fa-github" aria-hidden="true"></i></a>
+    {% endif %}
 	
 	{% if site.author.stackoverflow %}
     <a href="http://stackoverflow.com/users/{{ site.author.stackoverflow }}"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
