--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,9 +20,8 @@ layout: default
 <div class="page">
   {{ content }}
   <form action="https://formspree.io/twa63@sfu.ca" method="POST">
-	    <input type="text" placeholder="Name" name="name"><br>
 	    <input type="email" placeholder="Email" name="email"><br>
-	    <textarea name="comment" placeholder="Message here..." style="height:100px;"></textarea>
+	    <textarea name="comment" placeholder="Message here..." style="height:100px;"></textarea><br>
 	    <input type="submit" value="Send">
 	</form>
 </div>
