--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png"/>
+  <!-- favicon by Madebyoliver https://www.flaticon.com/authors/madebyoliver -->
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
 
   <!-- CSS -->
