--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,4 +25,35 @@ layout: default
 	    <i class="fa fa-comment" aria-hidden="true"></i><textarea name="comment" placeholder="Message" style="height:100px;"></textarea><br>
 	    <input type="submit" value="Send">
 	</form>
+
+<form action="https://formspree.io/twa63@sfu.ca" method="POST" class="form-horizontal">
+<fieldset>
+<div class="form-group">
+  <label class="col-md-4 control-label" for="textinput"><i class="fa fa-user" aria-hidden="true"></i></label>  
+  <div class="col-md-4">
+  <input id="textinput" name="name" type="text" placeholder="Name" class="form-control input-md" required="">
+  </div>
+</div>
+<div class="form-group">
+  <label class="col-md-4 control-label" for="textinput"><i class="fa fa-envelope" aria-hidden="true"></i></label>  
+  <div class="col-md-4">
+  <input id="textinput" name="email" type="text" placeholder="Email" class="form-control input-md" required="">
+  </div>
+</div>
+<div class="form-group">
+  <label class="col-md-4 control-label" for="textarea"><i class="fa fa-comment" aria-hidden="true"></i></label>
+  <div class="col-md-4">                     
+    <textarea class="form-control" id="textarea" name="comment">Message</textarea>
+  </div>
+</div>
+<div class="form-group">
+  <div class="col-md-4">
+    <button type="submit" id="singlebutton" name="singlebutton" class="btn btn-primary">Submit</button>
+  </div>
+</div>
+
+</fieldset>
+</form>
+
+
 </div>
