--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,9 +19,9 @@ layout: default
 </header>
 <div class="post">
   <div class="post-title">{{ page.title }}</div>
-  <span class="post-date">
+  <!--<span class="post-date">
     <time>{{ page.date | date_to_string }}</time>
-  </span>
+  </span>-->
   <div class="post-tag">
     <ul>
       {% for tag in page.tags %}
