--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Posts</h2>
+    <!--<h2>Posts</h2>
     <ul>
     {% for page in pages %}
         <li>
@@ -10,5 +10,52 @@
     {% else %}
         <li>No pages so far</li>
     {% endfor %}
-    </ul>
+    </ul>-->
+    <div class="container">
+        <div class="row mt-5">
+          <div class="col">
+            <h2>Terrence Wong
+                <br>
+                <span style="font-size:20px; font-family:Times New Roman, Times, serif"><em>Developer</em></span>
+                <br>
+                <span style="font-size:20px; font-family:Times New Roman, Times, serif">
+                  <a href="https://linkedin.com/in/tw604" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a> 
+                  <a href="https://github.com/terrencewong" target="_blank"><i class="fab fa-github-alt fa-lg"></i></a>
+                </span>
+            </h2>
+          </div>
+        </div>
+          <div class="row mt-4">
+            <div class="col-sm-12 col-md-4">
+                <div class="row mb-5">
+                  <div class="col">
+                    <span><em>Currently</em></span>
+                    <br>
+                    <span>Developer, <a href="https://thestar.com/" target="_blank">Toronto Star</a></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <span><em>Previously</em></span>
+                    <br>
+                    <span>Integration, Support &#x26; Test Developer,<br><a href="https://rainforestautomation.com/" target="_blank">Rainforest Automation</a></span>
+                    <br>
+                    <span>Web Developer, <a href="https://scentuals.com/" target="_blank">Scentuals</a></span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-8">
+                <div class="row">
+                  <div class="col-6">
+                    <img src="{{ url_for('static', filename='assets/rainforest_icon.jpg') }}">
+                  </div>
+                  <div class="col-6">
+                    <img src="{{ url_for('static', filename='assets/scentuals_icon.jpg') }}">
+                  </div>
+                </div>
+              </div>
+          </div >
+          
+        </div>
+      </div>
 {% endblock content %}
